Compatibility changes for headless runs
Temporary fix for MAC missing